--- a/index.html
+++ b/index.html
@@ -15,9 +15,23 @@
         <section class="container-img-logo">
             <img class="img logo" src="./Imagenes/Instagram_logo.svg.png" alt="Es el logo de instagram">
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <form action="" class="form">
+                <input type="text" placeholder="phone, user or email" class="form--input">
+                <input type="password" placeholder="password" class="form--input"> 
+                <button type="button" class="form--button"> log in </button>
+            </form>
+        </section>
+        <section>
+           <h1 class="divisor">o</h1>
+        </section>
+        <section>
+            <div class="login--alternative">
+                <a href="#" class="alternative--link alternative--link__bold">log in with facebook</a>
+                <a href="#" class="alternative--link alternative--link__small">Did you forget your password?</a>
+                <h2>You do not have an account? <a href="#">Sign up</a></h2>
+            </div>
+        </section>
     </main>
     <footer>
 
