Seguimos trabajando en la maquetacion del html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <a href="#" class="alternative--link alternative--link__bold">log in with facebook</a>
                 <a href="#" class="alternative--link alternative--link__small">Did you forget your password?</a>
                 <h2>You do not have an account? <a href="#">Sign up</a></h2>
+                <span>
+                    <a href="#"><img src="" alt="app store"></a>
+                </span>
+                <span><a href="#"><img src="" alt="Google play"></a></span>
             </div>
         </section>
     </main>
