se termina la maquetacion de html y se trabaja en el archivo de estilos de la primer seccion

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="./estilos/styles.css">
 </head>
 <body>
-    <main>
+    <main class="main">
         <section class="container-img-logo">
-            <img class="img logo" src="./Imagenes/Instagram_logo.svg.png" alt="Es el logo de instagram">
+            <img class="img-logo" src="./Imagenes/Instagram_logo.svg.png" alt="Es el logo de instagram">
         </section>
-        <section>
-            <form action="" class="form">
+        <section class="form">
+            <form action="" class="form-container">
                 <input type="text" placeholder="phone, user or email" class="form--input">
                 <input type="password" placeholder="password" class="form--input"> 
                 <button type="button" class="form--button"> log in </button>
@@ -37,8 +37,71 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <ul class="footer--list">
+            <li>
+                <a href="#">Meta</a>
+            </li>
+            <li>
+                <a href="#">Información</a>
+            </li>
+            <li>
+                <a href="#">Blog</a>
+            </li>
+            <li>
+                <a href="#">Empleo</a>
+            </li>
+            <li>
+                <a href="#">Ayuda</a>
+            </li>
+            <li>
+                <a href="#">API</a>
+            </li>
+            <li>
+                <a href="#">Privacidad</a>
+            </li>
+            <li>
+                <a href="#">Condiciones</a>
+            </li>
+            <li>
+                <a href="#">Cuentas destacadas</a>
+            </li>
+            <li>
+                <a href="#">Hashtags</a>
+            </li>
+            <li>
+                <a href="#">Ubicaciones</a>
+            </li>
+            <li>
+                <a href="#">Instagram lite</a>
+            </li>
+            <li>
+                <a href="#">Subir contactos y no usuarios</a>
+            </li>
+            <li>
+                <a href="#">Danza</a>
+            </li>
+            <li>
+                <a href="#">Comida y bebida</a>
+            </li>
+            <li>
+                <a href="#">Casa y jardín</a>
+            </li>
+            <li>
+                <a href="#">Música</a>
+            </li>
+            <li>
+                <a href="#">Artes visuales</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="#">Español</a>
+            </li>
+            <li>
+                <a href="#">2022 Instagram from Meta</a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
