--- a/index.html
+++ b/index.html
@@ -13,29 +13,31 @@
 <body>
     <main class="main">
         <section class="container-img-logo">
-            <img class="img-logo" src="./Imagenes/Instagram_logo.svg.png" alt="Es el logo de instagram">
+           <img class="img-logo" src="./Imagenes/Instagram_logo.svg.png" alt="Es el logo de instagram">
         </section>
         <section class="form">
             <form action="" class="form-container">
-                <input type="text" placeholder="phone, user or email" class="form--input">
+                <input type="text" placeholder="Teléfono, usuario o correo" class="form--input">
                 <input type="password" placeholder="password" class="form--input"> 
-                <button type="button" class="form--button"> log in </button>
+                <button type="button" class="form--button"> Iniciar sesión </button>
             </form>
         </section>
-        <section>
-           <h1 class="divisor">o</h1>
+        <section class="container--divisor">
+            <div></div>
+               <h1 class="divisor">o</h1>
+            <div></div>
         </section>
-        <section>
+        <section class="login--alternative--container">
             <div class="login--alternative">
-                <a href="#" class="alternative--link alternative--link__bold">log in with facebook</a>
-                <a href="#" class="alternative--link alternative--link__small">Did you forget your password?</a>
-                <h2>You do not have an account? <a href="#">Sign up</a></h2>
-                <span>
-                    <a href="#"><img src="" alt="app store"></a>
+               <a href="#" class="alternative--link alternative--link__bold">log in with facebook</a>
+               <a href="#" class="alternative--link alternative--link__small">Did you forget your password?</a>
+               <h2>You do not have an account? <a href="#">Sign up</a></h2>
+               <span>
+                   <a href="#"><img src="" alt="app store"></a>
                 </span>
                 <span><a href="#"><img src="" alt="Google play"></a></span>
             </div>
-        </section>
+       </section>
     </main>
     <footer class="footer">
         <ul class="footer--list">
