--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/styles.css">
+    <script src="https://kit.fontawesome.com/cdbe1d4384.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="main">
@@ -18,7 +19,7 @@
         
             <form action="" class="form-container">
                 <input type="text" placeholder="Teléfono, usuario o correo" class="form--input">
-                <input type="password" placeholder="password" class="form--input"> 
+                <input type="password" placeholder="Contraseña" class="form--input"> 
                 <button type="button" class="form--button"> Iniciar sesión </button>
             </form>
         
@@ -29,14 +30,16 @@
         </section>
         <section class="login--alternative--container">
             <div class="login--alternative">
-               <a href="#" class="alternative--link alternative--link__bold">log in with facebook</a>
-               <a href="#" class="alternative--link alternative--link__small">Did you forget your password?</a>
-               <h2>You do not have an account? <a href="#">Sign up</a></h2>
-               <span>
-                   <a href="#"><img src="" alt="app store"></a>
-                </span>
-                <span><a href="#"><img src="" alt="Google play"></a></span>
+               <a href="#" class="alternative--link alternative--link__bold"> <i class="fa-brands fa-square-facebook"></i>Iniciar sesión con facebook</a>
+               <a href="#" class="alternative--link__small">¿Olvidaste tu contraseña?</a>
+               <h2>¿No tienes una cuenta? <a href="#">Regístrate</a></h2>
             </div>
+       </section>
+       <section>
+           <span>
+              <a href="#"><img src="" alt="app store"></a>
+           </span>
+           <span><a href="#"><img src="" alt="Google play"></a></span>
        </section>
     </main>
     <footer class="footer">
