--- a/index.html
+++ b/index.html
@@ -30,77 +30,82 @@
         </section>
         <section class="login--alternative--container">
             <div class="login--alternative">
-               <a href="#" class="alternative--link alternative--link__bold"> <i class="fa-brands fa-square-facebook"></i>Iniciar sesión con facebook</a>
+               <a href="#" class="alternative--link alternative--link__bold"> <i class="fa-brands fa-square-facebook"></i>Iniciar sesión con Facebook</a>
                <a href="#" class="alternative--link__small">¿Olvidaste tu contraseña?</a>
-               <h2>¿No tienes una cuenta? <a href="#">Regístrate</a></h2>
+               <h2 class="login--alternative--Registration">¿No tienes una cuenta? <a href="#">Regístrate</a></h2>
             </div>
        </section>
-       <section>
-           <span>
-              <a href="#"><img src="" alt="app store"></a>
+       <section class="section--downloads">
+           <span class="section--dowloads--title">
+              <h3>Descarga la app.</h3>
            </span>
-           <span><a href="#"><img src="" alt="Google play"></a></span>
+           <span class="section--dowloads--container">
+              <a href="#"><img src="./Imagenes/App Store.png" alt="app store"></a>
+           </span>
+           <span class="section--dowloads--container2">
+              <a href="#"><img src="./Imagenes/Google Play.png" alt="Google play"></a>
+           </span>
        </section>
     </main>
     <footer class="footer">
         <ul class="footer--list">
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Meta</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Información</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Blog</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Empleo</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Ayuda</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">API</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Privacidad</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Condiciones</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Cuentas destacadas</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Hashtags</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Ubicaciones</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Instagram lite</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Subir contactos y no usuarios</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Danza</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Comida y bebida</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Casa y jardín</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Música</a>
             </li>
-            <li>
+            <li class="footer--list--container">
                 <a href="#">Artes visuales</a>
             </li>
         </ul>
-        <ul>
-            <li>
+        <ul class="footer--list2">
+            <li class="footer--list2--container">
                 <a href="#">Español</a>
             </li>
             <li>
