--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         </ul>
         <ul class="footer--list2">
             <li class="footer--list2--container">
-                <a href="#">Español</a>
+                <a href="#">Español <i class="fa-solid fa-angle-down"></i></a>
             </li>
-            <li>
+            <li class="footer--list2--container">
                 <a href="#">2022 Instagram from Meta</a>
             </li>
         </ul>
