--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/styles.css">
+    <link rel="stylesheet" href="./estilos/MobilL.css" media="(min-width: 425px)">
     <script src="https://kit.fontawesome.com/cdbe1d4384.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -109,7 +110,7 @@
                 <a href="#">Español <i class="fa-solid fa-angle-down"></i></a>
             </li>
             <li class="footer--list2--container">
-                <a href="#">2022 Instagram from Meta</a>
+                <a href="#"><i class="fa-regular fa-copyright"></i>2022 Instagram from Meta</a>
             </li>
         </ul>
     </footer>
